fixing the horizontal scroll by adding frow to header

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,6 +1,6 @@
 /* Header */
 .logo {
-	float: left;
+	// float: left;
 	font-size: 13px;
 	padding-top: 13px;
 	position: relative;
@@ -45,7 +45,7 @@
 
 /* - Mobile Menu */
 .menu {
-	float: right;
+	// float: right;
 }
 
 /* - Overlay Responsive Menu */
